# CipherChant

./: Dockerfile  README.md  Vagrantfile  dependencies.sh  example2.py  pyproject.toml  tox.ini
src/cipherchant/: cipherchant.py
src/cipherchant/data/: american-english.2345689.tar.xz  bp_wrapper.py  eff_large_wordlist.stretch_235689.txt
src/cipherchant/scripts/: mk_dict.py  nlp.py
tests/: test_cipherchant.py
tests/data/: chants_passphrase=p_bpw=13_nofec.txt  messages.txt  passphrase_0.file.txt
